<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_city_chooser_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/citychooser_padding_inner"
    tools:context="com.aleksandersh.weather.features.city.presentation.CityChooserFragment"
    >

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/citychooser_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:clickable="true"
        app:fabSize="normal"
        app:layout_anchor="@+id/citychooser_header"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_all_add_black_24dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/citychooser_header"
            style="@style/AppTheme.Weather.CityChooser.Header"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/citychooser_height_header"
            android:layout_margin="@dimen/all_margin_small"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/citychooser_header_textview_title"
                    style="@style/AppTheme.Weather.CityChooser.Header.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:text="@string/citychooser_header_current_city"
                    />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/citychooser_height_logo"
                    android:scaleType="fitEnd"
                    app:srcCompat="@drawable/all_logo_yandex"
                    />


            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/citychooser_textview_search_city"
                    style="@style/AppTheme.Weather.CityChooser.Header.City"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/city_chooser_hint_city_name"
                    android:maxLines="1"
                    tools:text="Moscow"
                    />

                <TextView
                    android:id="@+id/citychooser_textview_current_city"
                    style="@style/AppTheme.Weather.CityChooser.Header.City"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:text="Moscow"
                    />

            </FrameLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/citychooser_recyclerview_cities"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
