<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_weather_fragment"
            android:icon="@drawable/ic_nav_weather"
            android:title="@string/nav_title_weather_fragment"/>
        <item
            android:id="@+id/nav_settings_fragment"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/nav_title_settings_fragment"/>
        <item
            android:id="@+id/nav_about_fragment"
            android:icon="@drawable/ic_nav_about"
            android:title="@string/nav_title_about_fragment"/>
    </group>

</menu>