...
        </android.support.v4.widget.NestedScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

    <!--BottomSheetBehaviour won't work with references, so we're using hardcoded values -->
    <FrameLayout
        android:id="@+id/weather_bottomsheet"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@color/colorPrimary"
        app:behavior_peekHeight="56dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        >
...
