<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_weather_toolbar_change_city"
        android:icon="@drawable/ic_menu_change_city"
        android:title="@string/menu_title_change_city"
        app:showAsAction="always"
        />
</menu>